--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.h linguist-language=C++
-Sakura\Engine\Include\* linguist-vendored
-Sakura\Engine\Library\* linguist-vendored
+Sakura/Engine/Include/DirectX/* linguist-vendored
+Sakura/Engine/Library/DirectX/* linguist-vendored
