Create Actor.h and move class Actor to Actor.h

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.h linguist-language=C++
 Sakura/Engine/Include/DirectX/* linguist-vendored
 Sakura/Engine/Library/DirectX/* linguist-vendored
+Sakura/Engine/Include/Lua/* linguist-vendored
+Sakura/Engine/Library/Lua/* linguist-vendored
