--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ Sakura/Engine/Include/DirectX/* linguist-vendored
 Sakura/Engine/Library/DirectX/* linguist-vendored
 Sakura/Engine/Include/Lua/* linguist-vendored
 Sakura/Engine/Library/Lua/* linguist-vendored
+Sakura/Engine/Source/ImGui* linguist-vendored
