--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,5 @@
 *.h linguist-language=C++
 *.lua linguist-language=Lua
-Sakura/Engine/Include/DirectX/* linguist-vendored
-Sakura/Engine/Library/DirectX/* linguist-vendored
-Sakura/Engine/Include/Lua/* linguist-vendored
-Sakura/Engine/Library/Lua/* linguist-vendored
+Sakura/Engine/Include/* linguist-vendored
+Sakura/Engine/Library/* linguist-vendored
 Sakura/Engine/Source/ImGui/* linguist-vendored
