--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
+*.* linguist-vendored
 *.h linguist-language=C++
 *.lua linguist-language=Lua
-*.lib linguist-vendored
 *.cs linguist-language=C#
-Sakura/Engine/Source/ImGui linguist-vendored
-Sakura/Engine/Library linguist-vendored
-Sakura/Engine/Include linguist-vendored
+Sakura/Engine/Source/ImGui/* linguist-vendored
+Sakura/Engine/Library/* linguist-vendored
+Sakura/Engine/Include/* linguist-vendored
