Disable assetmanager, framebuffers

--- a/Sakura/Engine/imgui.ini
+++ b/Sakura/Engine/imgui.ini
@@ -4,15 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=26,212
-Size=549,461
+Pos=138,65
+Size=1606,259
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1920,1061
 Collapsed=0
 
+[Window][Dear ImGui Metrics/Debugger]
+Pos=127,137
+Size=339,324
+Collapsed=0
+
+[Window][viewport]
+Pos=138,326
+Size=1606,577
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,1042 CentralNode=1
+DockNode    ID=0x00000001 Pos=138,65 Size=1606,838 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1606,259 Selected=0xE87781F4
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1606,577 Selected=0x0BA3B4F3
 
