--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -4,7 +4,84 @@ Size=400,400
 Collapsed=0
 
 [Window][xd]
-Pos=-2,4
-Size=1874,980
+Pos=156,137
+Size=1867,1001
 Collapsed=0
+
+[Window][Scripts]
+Pos=314,343
+Size=322,379
+Collapsed=0
+
+[Window][Dockspace]
+Pos=0,0
+Size=1920,1061
+Collapsed=0
+
+[Window][a]
+Pos=327,564
+Size=1728,954
+Collapsed=0
+
+[Window][Viewport]
+Pos=316,8
+Size=1282,778
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Scene]
+Pos=8,8
+Size=306,317
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Graphics Settings]
+Pos=1600,8
+Size=312,1045
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Content]
+Pos=316,788
+Size=1282,265
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Actor]
+Pos=8,509
+Size=246,544
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][##Render2DSurface]
+Pos=0,0
+Size=1920,1061
+Collapsed=0
+
+[Window][Actor Properties]
+Pos=8,327
+Size=306,726
+Collapsed=0
+DockId=0x0000000A,0
+
+[Table][0x91106D74,3]
+Column 0  Weight=0.9912
+Column 1  Weight=0.8194
+Column 2  Weight=1.1894
+
+[Table][0x5D17B70E,1]
+Column 0  Weight=0.9619
+
+[Docking][Data]
+DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,8 Size=1904,1045 Split=X
+  DockNode        ID=0x00000005 Parent=0xDF1111E6 SizeRef=1590,1045 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=306,1045 Split=Y Selected=0xE192E354
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=185,499 Split=Y Selected=0xE192E354
+        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=246,317 Selected=0xE192E354
+        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=246,726 Selected=0xF8155E68
+      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=185,544 Selected=0xBB9186EE
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1282,1045 Split=Y
+      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1343,778 CentralNode=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1343,265 Selected=0xF7DAC780
+  DockNode        ID=0x00000006 Parent=0xDF1111E6 SizeRef=312,1045 Selected=0x845330AE
 
