Editor features & changes

--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -64,6 +64,26 @@ Size=306,704
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][Import]
+Pos=442,359
+Size=358,254
+Collapsed=0
+
+[Window][Import Existing]
+Pos=125,164
+Size=472,239
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=697,155
+Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=162,175
+Size=520,600
+Collapsed=0
+
 [Table][0x91106D74,3]
 Column 0  Weight=0.9912
 Column 1  Weight=0.8194
@@ -81,7 +101,7 @@ DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1013 Split=
         DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=246,726 Selected=0xF8155E68
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=185,544 Selected=0xBB9186EE
     DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1282,1045 Split=Y
-      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1343,778 CentralNode=1 Selected=0x13926F0B
+      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1343,746 CentralNode=1 Selected=0x13926F0B
       DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1343,265 Selected=0xF7DAC780
   DockNode        ID=0x00000006 Parent=0xDF1111E6 SizeRef=312,1045 Selected=0x845330AE
 
