--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Dockspace]
 Pos=0,0
-Size=1920,1055
+Size=1920,1061
 Collapsed=0
 
 [Window][a]
@@ -25,24 +25,24 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=305,40
-Size=1293,740
+Size=1293,746
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene]
 Pos=8,40
-Size=295,305
+Size=295,307
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Graphics Settings]
 Pos=1600,40
-Size=312,1007
+Size=312,1013
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content]
-Pos=305,782
+Pos=305,788
 Size=1293,265
 Collapsed=0
 DockId=0x0000000B,0
@@ -55,12 +55,12 @@ DockId=0x00000004,0
 
 [Window][##Render2DSurface]
 Pos=0,0
-Size=1920,1055
+Size=1920,1061
 Collapsed=0
 
 [Window][Actor Properties]
-Pos=8,347
-Size=295,700
+Pos=8,349
+Size=295,704
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -75,13 +75,38 @@ Size=472,239
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=697,155
+Pos=1553,771
 Size=550,680
-Collapsed=0
+Collapsed=1
 
 [Window][Example: Console]
 Pos=162,175
 Size=520,600
+Collapsed=0
+
+[Window][Viewport2]
+Pos=368,282
+Size=170,225
+Collapsed=0
+
+[Window][Material Properties]
+Pos=1498,401
+Size=313,247
+Collapsed=0
+
+[Window][test]
+Pos=741,482
+Size=438,96
+Collapsed=0
+
+[Window][CreateActor]
+Pos=741,482
+Size=438,96
+Collapsed=0
+
+[Window][Create Actor]
+Pos=814,499
+Size=292,87
 Collapsed=0
 
 [Table][0x91106D74,3]
@@ -93,7 +118,7 @@ Column 2  Weight=1.1894
 Column 0  Weight=0.9619
 
 [Docking][Data]
-DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1007 Split=X
+DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1013 Split=X
   DockNode        ID=0x00000005 Parent=0xDF1111E6 SizeRef=1590,1045 Split=X
     DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=295,1045 Split=Y Selected=0xE192E354
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=185,499 Split=Y Selected=0xE192E354
