--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -25,9 +25,9 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=305,40
-Size=1293,746
+Size=1293,1013
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Window][Scene]
 Pos=8,40
@@ -42,7 +42,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content]
-Pos=305,788
+Pos=459,817
 Size=1293,265
 Collapsed=0
 DockId=0x0000000B,0
@@ -90,9 +90,9 @@ Size=170,225
 Collapsed=0
 
 [Window][Material Properties]
-Pos=1498,401
+Pos=1497,401
 Size=313,247
-Collapsed=0
+Collapsed=1
 
 [Window][test]
 Pos=741,482
@@ -118,6 +118,7 @@ Column 2  Weight=1.1894
 Column 0  Weight=0.9619
 
 [Docking][Data]
+DockNode          ID=0x0000000B Pos=459,817 Size=1293,265 Selected=0xF7DAC780
 DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1013 Split=X
   DockNode        ID=0x00000005 Parent=0xDF1111E6 SizeRef=1590,1045 Split=X
     DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=295,1045 Split=Y Selected=0xE192E354
@@ -125,8 +126,6 @@ DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1013 Split=
         DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=246,317 Selected=0xE192E354
         DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=246,726 Selected=0xF8155E68
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=185,544 Selected=0xBB9186EE
-    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1293,1045 Split=Y Selected=0x13926F0B
-      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1282,746 CentralNode=1 Selected=0x13926F0B
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1282,265 Selected=0xF7DAC780
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1293,1045 CentralNode=1 Selected=0x13926F0B
   DockNode        ID=0x00000006 Parent=0xDF1111E6 SizeRef=312,1045 Selected=0x845330AE
 
