--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -25,9 +25,9 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=305,40
-Size=1293,1013
+Size=1293,684
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][Scene]
 Pos=8,40
@@ -42,9 +42,10 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content]
-Pos=332,731
-Size=1293,350
+Pos=305,726
+Size=1293,327
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Actor]
 Pos=8,509
@@ -89,9 +90,9 @@ Size=170,225
 Collapsed=0
 
 [Window][Material Properties]
-Pos=1496,401
+Pos=1580,482
 Size=313,247
-Collapsed=0
+Collapsed=1
 
 [Window][test]
 Pos=741,482
@@ -124,6 +125,8 @@ DockSpace         ID=0xDF1111E6 Window=0x5B816B74 Pos=8,40 Size=1904,1013 Split=
         DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=246,317 Selected=0xE192E354
         DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=246,726 Selected=0xF8155E68
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=185,544 Selected=0xBB9186EE
-    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1293,1045 CentralNode=1 Selected=0x13926F0B
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1293,1045 Split=Y Selected=0x13926F0B
+      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1293,684 CentralNode=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1293,327 Selected=0xF7DAC780
   DockNode        ID=0x00000006 Parent=0xDF1111E6 SizeRef=312,1045 Selected=0x845330AE
 
