Redesigned Content Browser

--- a/Combo/Engine/imgui.ini
+++ b/Combo/Engine/imgui.ini
@@ -90,9 +90,10 @@ Size=170,225
 Collapsed=0
 
 [Window][Material Properties]
-Pos=1580,482
-Size=313,247
+Pos=305,726
+Size=1293,327
 Collapsed=0
+DockId=0x00000008,1
 
 [Window][test]
 Pos=741,482
